--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -5,7 +5,8 @@
         <span class="ion-skip-backward"></span>
       </a>
       <a class="play-pause">
-        <span class="ion-play"></span>
+        <span class="ion-play" ng-show="!playing" ng-hide="playing"></span>
+        <span class="ion-pause" ng-show="playing" ng-hide="!playing"></span>
       </a>
       <a class="next">
         <span class="ion-skip-forward"></span>
